Implemeneted json schema id support. The top level id of a schema file is applied to all elements within this file, if not overwritten on a subtype level. If the id is present, and no mapping is available, the id is converted using the name conversion defined by JAX-B standard, otherwise the mapped package name for thet id is used. If the id is not present the default package name is used (configurable by targetPackage property as before). Changed handling for enum types. For anonymous enums - enums directly defined as type of a property, the generation is like before. If instead an enum type, either within the same file, or another file is referenced, the corresponding java enum type is generated in a package. For latter case the aforementioned id rules apply as well. All affected tests adjusted. Unit/Integration tests for these features ongoing.