@@ -16,13 +16,18 @@
 
 package org.jsonschema2pojo;
 
-import static org.apache.commons.lang3.StringUtils.*;
-import static org.hamcrest.Matchers.*;
-import static org.junit.Assert.*;
-import static org.mockito.Mockito.*;
+import static org.apache.commons.lang3.StringUtils.removeEnd;
+import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.is;
+import static org.hamcrest.Matchers.not;
+import static org.hamcrest.Matchers.notNullValue;
+import static org.hamcrest.Matchers.sameInstance;
+import static org.junit.Assert.assertThat;
+import static org.mockito.Mockito.mock;
 
-import java.net.URI;
+import java.net.MalformedURLException;
 import java.net.URISyntaxException;
+import java.net.URL;
 
 import org.junit.Test;
 
@@ -34,30 +39,30 @@ public class SchemaStoreTest {
     @Test
     public void createWithAbsolutePath() throws URISyntaxException {
 
-        URI schemaUri = getClass().getResource("/schema/address.json").toURI();
+        URL schemaUri = getClass().getResource("/schema/address.json");
 
-        Schema schema = new SchemaStore().create(schemaUri);
+        Schema schema = new SchemaStore().create(null, schemaUri);
 
         assertThat(schema, is(notNullValue()));
-        assertThat(schema.getId(), is(equalTo(schemaUri)));
+        assertThat(schema.getUrl(), is(equalTo(schemaUri)));
         assertThat(schema.getContent().has("description"), is(true));
         assertThat(schema.getContent().get("description").asText(), is(equalTo("An Address following the convention of http://microformats.org/wiki/hcard")));
 
     }
 
     @Test
-    public void createWithRelativePath() throws URISyntaxException {
+    public void createWithRelativePath() throws URISyntaxException, MalformedURLException {
 
-        URI addressSchemaUri = getClass().getResource("/schema/address.json").toURI();
+        URL addressSchemaUri = getClass().getResource("/schema/address.json");
 
         SchemaStore schemaStore = new SchemaStore();
-        Schema addressSchema = schemaStore.create(addressSchemaUri);
+        Schema addressSchema = schemaStore.create(null, addressSchemaUri);
         Schema enumSchema = schemaStore.create(addressSchema, "enum.json");
 
         String expectedUri = removeEnd(addressSchemaUri.toString(), "address.json") + "enum.json";
 
         assertThat(enumSchema, is(notNullValue()));
-        assertThat(enumSchema.getId(), is(equalTo(URI.create(expectedUri))));
+        assertThat(enumSchema.getUrl(), is(equalTo(new URL(expectedUri))));
         assertThat(enumSchema.getContent().has("enum"), is(true));
 
     }
@@ -65,10 +70,10 @@ public class SchemaStoreTest {
     @Test
     public void createWithSelfRef() throws URISyntaxException {
 
-        URI schemaUri = getClass().getResource("/schema/address.json").toURI();
+        URL schemaUri = getClass().getResource("/schema/address.json");
 
         SchemaStore schemaStore = new SchemaStore();
-        Schema addressSchema = schemaStore.create(schemaUri);
+        Schema addressSchema = schemaStore.create(null, schemaUri);
         Schema selfRefSchema = schemaStore.create(addressSchema, "#");
 
         assertThat(addressSchema, is(sameInstance(selfRefSchema)));
@@ -76,18 +81,18 @@ public class SchemaStoreTest {
     }
 
     @Test
-    public void createWithFragmentResolution() throws URISyntaxException {
+    public void createWithFragmentResolution() throws URISyntaxException, MalformedURLException {
 
-        URI addressSchemaUri = getClass().getResource("/schema/address.json").toURI();
+        URL addressSchemaUri = getClass().getResource("/schema/address.json");
 
         SchemaStore schemaStore = new SchemaStore();
-        Schema addressSchema = schemaStore.create(addressSchemaUri);
+        Schema addressSchema = schemaStore.create(null, addressSchemaUri);
         Schema innerSchema = schemaStore.create(addressSchema, "#/properties/post-office-box");
 
         String expectedUri = addressSchemaUri.toString() + "#/properties/post-office-box";
 
         assertThat(innerSchema, is(notNullValue()));
-        assertThat(innerSchema.getId(), is(equalTo(URI.create(expectedUri))));
+        assertThat(innerSchema.getUrl(), is(equalTo(new URL(expectedUri))));
         assertThat(innerSchema.getContent().has("type"), is(true));
         assertThat(innerSchema.getContent().get("type").asText(), is("string"));
 
@@ -96,13 +101,13 @@ public class SchemaStoreTest {
     @Test
     public void schemaAlreadyReadIsReused() throws URISyntaxException {
 
-        URI schemaUri = getClass().getResource("/schema/address.json").toURI();
+        URL schemaUri = getClass().getResource("/schema/address.json");
 
         SchemaStore schemaStore = new SchemaStore();
 
-        Schema schema1 = schemaStore.create(schemaUri);
+        Schema schema1 = schemaStore.create(null, schemaUri);
 
-        Schema schema2 = schemaStore.create(schemaUri);
+        Schema schema2 = schemaStore.create(null, schemaUri);
 
         assertThat(schema1, is(sameInstance(schema2)));
 
@@ -114,9 +119,9 @@ public class SchemaStoreTest {
         JType firstClass = mock(JDefinedClass.class);
         JType secondClass = mock(JDefinedClass.class);
 
-        URI schemaUri = getClass().getResource("/schema/address.json").toURI();
+        URL schemaUri = getClass().getResource("/schema/address.json");
 
-        Schema schema = new SchemaStore().create(schemaUri);
+        Schema schema = new SchemaStore().create(null, schemaUri);
 
         schema.setJavaTypeIfEmpty(firstClass);
         assertThat(schema.getJavaType(), is(equalTo(firstClass)));
